fix: Add Z-Index to appear over intercom (#245)
* fix: Add Z-Index to appear over intercom

* fix: added undefined to optional prop

* make toasts on bottom center

--- a/src/components/Toast/Toast.css
+++ b/src/components/Toast/Toast.css
@@ -8,6 +8,7 @@
   position: relative;
   background-color: var(--toast);
   color: var(--toast-text);
+  z-index: 2147483002; /* Appear over intercom */
 }
 
 .dcl.toast .toast-info {
